--- a/myfirstRmarkdown.Rmd
+++ b/myfirstRmarkdown.Rmd
@@ -2,7 +2,7 @@
 title: "myfirstRmarkdown"
 author: "TLaguna"
 date: "July 13, 2016"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
